# src/types/hunter.type.ts
@@ -1,9 +1,9 @@
 export type hunterCreateType = {
-    name: string;
-    gender: "Male" | "Female";
-    power: string;
+  name: string;
+  gender: "Male" | "Female";
+  power: string;
 };
 
 export type hunterUpdateType = hunterCreateType & {
-    id: string | number;
+  id: string | number;
 };
